@@ -53,7 +53,7 @@ ecc_pm1_redc (const struct ecc_modulo *m, mp_limb_t *rp)
     rp[i] = mpn_submul_1 (rp + i + k,
 			  m->redc_mpm1, m->size - k, rp[i]);
   hi = mpn_sub_n (rp, rp + m->size, rp, m->size);
-  cy = cnd_add_n (hi, rp, m->m, m->size);
+  cy = mpn_cnd_add_n (hi, rp, rp, m->m, m->size);
   assert (cy == hi);
 
   if (shift > 0)
