@@ -71,7 +71,7 @@ _eddsa_hash (const struct ecc_modulo *m,
 
       hi = mpn_addmul_1 (rp + m->size, m->B, m->size, hi);
       assert (hi <= 1);
-      hi = cnd_add_n (hi, rp + m->size, m->B, m->size);
+      hi = mpn_cnd_add_n (hi, rp + m->size, rp + m->size, m->B, m->size);
       assert (hi == 0);
     }
   m->mod (m, rp);
